--- a/index.html
+++ b/index.html
@@ -8,41 +8,53 @@
 </head>
 <body>
   <header class="hero">
-    <h1>The Kingdom Fighters</h1>
-    <p>Open-source tools for ethical hackers.</p>
-    <a class="btn" href="https://discord.gg/xUFt2rXfYM" target="_blank">Join Our Discord</a>
+    <div class="container">
+      <h1>The Kingdom Fighters</h1>
+      <p>Open-source tools for ethical hackers.<br>Made by humans. Checked by AI.</p>
+      <a class="btn" href="https://discord.gg/xUFt2rXfYM" target="_blank">Join Our Discord</a>
+    </div>
   </header>
 
-  <section class="features">
-    <h2>Made by Humans. Checked by AI.</h2>
-    <div class="feature-list">
-      <div class="feature">🛠️ Open-source Arsenal</div>
-      <div class="feature">🤖 AI Verified</div>
-      <div class="feature">👨‍💻 Ethical Hacker Focused</div>
+  <section class="features container">
+    <h2>Why Choose Us</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>🛠️ Open-Source Arsenal</h3>
+        <p>All tools are open-source and community-driven.</p>
+      </div>
+      <div class="card">
+        <h3>🤖 AI Verified</h3>
+        <p>Each release is reviewed by AI for reliability and safety.</p>
+      </div>
+      <div class="card">
+        <h3>👨‍💻 Ethical Focus</h3>
+        <p>We empower white-hat hackers with purpose-built tools.</p>
+      </div>
     </div>
   </section>
 
-  <section class="catalog">
+  <section class="tools container">
     <h2>Tool Catalog</h2>
-    <ul>
-      <li><strong>NetProbe</strong> – Network analysis utility</li>
-      <li><strong>ShellKnight</strong> – Custom shell scripts</li>
-      <li><strong>CryptForge</strong> – Simple encryption toolkit</li>
-      <li><strong>WallBreaker</strong> – Firewall tester</li>
-      <li><strong>PulseScan</strong> – Live traffic scanner</li>
-      <li><strong>Injecto</strong> – Code injection sandbox</li>
-    </ul>
+    <div class="grid">
+      <div class="tool-card"><h4>NetProbe</h4><p>Network analysis utility</p></div>
+      <div class="tool-card"><h4>ShellKnight</h4><p>Custom shell scripting suite</p></div>
+      <div class="tool-card"><h4>CryptForge</h4><p>Encryption made simple</p></div>
+      <div class="tool-card"><h4>WallBreaker</h4><p>Firewall stress tester</p></div>
+      <div class="tool-card"><h4>PulseScan</h4><p>Live network traffic monitor</p></div>
+      <div class="tool-card"><h4>Injecto</h4><p>Code injection sandbox</p></div>
+    </div>
   </section>
 
-  <section class="showcase">
+  <section class="showcase container">
     <h2>Project Showcase</h2>
-    <p>Coming soon: demos, write-ups, and walkthroughs of our tools in action.</p>
+    <p>Coming soon: demos, guides, and case studies showing our tools in action.</p>
   </section>
 
-  <footer class="contact">
-    <h3>Contact Us</h3>
-    <p>Join our Discord: <a href="https://discord.gg/xUFt2rXfYM" target="_blank">discord.gg/xUFt2rXfYM</a></p>
-    <p>© The Kingdom Fighters. Made by humans. Checked by AI.</p>
+  <footer class="footer">
+    <div class="container">
+      <p>Contact us via <a href="https://discord.gg/xUFt2rXfYM" target="_blank">Discord</a></p>
+      <p>© The Kingdom Fighters</p>
+    </div>
   </footer>
 </body>
 </html>
