--- a/index.html
+++ b/index.html
@@ -35,13 +35,37 @@
 
   <section class="tools container">
     <h2>Tool Catalog</h2>
-    <div class="grid">
-      <div class="tool-card"><h4>NetProbe</h4><p>Network analysis utility</p></div>
-      <div class="tool-card"><h4>ShellKnight</h4><p>Custom shell scripting suite</p></div>
-      <div class="tool-card"><h4>CryptForge</h4><p>Encryption made simple</p></div>
-      <div class="tool-card"><h4>WallBreaker</h4><p>Firewall stress tester</p></div>
-      <div class="tool-card"><h4>PulseScan</h4><p>Live network traffic monitor</p></div>
-      <div class="tool-card"><h4>Injecto</h4><p>Code injection sandbox</p></div>
+    <div class="grid tools-grid">
+      <div class="tool-card">
+        <img src="https://via.placeholder.com/100x100?text=NetProbe" alt="NetProbe logo" />
+        <h4>NetProbe</h4>
+        <p>Network analysis utility</p>
+      </div>
+      <div class="tool-card">
+        <img src="https://via.placeholder.com/100x100?text=ShellKnight" alt="ShellKnight logo" />
+        <h4>ShellKnight</h4>
+        <p>Custom shell scripting suite</p>
+      </div>
+      <div class="tool-card">
+        <img src="https://via.placeholder.com/100x100?text=CryptForge" alt="CryptForge logo" />
+        <h4>CryptForge</h4>
+        <p>Encryption made simple</p>
+      </div>
+      <div class="tool-card">
+        <img src="https://via.placeholder.com/100x100?text=WallBreaker" alt="WallBreaker logo" />
+        <h4>WallBreaker</h4>
+        <p>Firewall stress tester</p>
+      </div>
+      <div class="tool-card">
+        <img src="https://via.placeholder.com/100x100?text=PulseScan" alt="PulseScan logo" />
+        <h4>PulseScan</h4>
+        <p>Live network traffic monitor</p>
+      </div>
+      <div class="tool-card">
+        <img src="https://via.placeholder.com/100x100?text=Injecto" alt="Injecto logo" />
+        <h4>Injecto</h4>
+        <p>Code injection sandbox</p>
+      </div>
     </div>
   </section>
 
