--- a/index.html
+++ b/index.html
@@ -70,9 +70,29 @@
   </section>
 
   <section class="showcase container">
-    <h2>Project Showcase</h2>
-    <p>Coming soon: demos, guides, and case studies showing our tools in action.</p>
-  </section>
+  <h2>Project Showcase</h2>
+  <p>Coming soon: demos, guides, and case studies showing our tools in action.</p>
+  <div class="showcase-grid">
+    <div class="showcase-card">
+      <img src="https://via.placeholder.com/300x200?text=Demo1" alt="Demo 1" />
+      <h4>Network Penetration Demo</h4>
+      <p>A demo of how our NetProbe tool was used in a real-world network penetration test.</p>
+      <a href="#">Learn More</a>
+    </div>
+    <div class="showcase-card">
+      <img src="https://via.placeholder.com/300x200?text=Demo2" alt="Demo 2" />
+      <h4>Firewall Stress Test</h4>
+      <p>See how WallBreaker is used to evaluate firewall strength with real examples.</p>
+      <a href="#">Learn More</a>
+    </div>
+    <div class="showcase-card">
+      <img src="https://via.placeholder.com/300x200?text=Demo3" alt="Demo 3" />
+      <h4>Code Injection Tutorial</h4>
+      <p>Injecto tool tutorial: Explore a practical use case of code injection techniques.</p>
+      <a href="#">Learn More</a>
+    </div>
+  </div>
+</section>
 
   <footer class="footer">
     <div class="container">
