--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <img src="https://via.placeholder.com/300x200?text=Demo3" alt="Demo 3" />
       <h4>Code Injection Tutorial</h4>
       <p>Injecto tool tutorial: Explore a practical use case of code injection techniques.</p>
-      <a href="#">Learn More</a>
+      <a href="https://learn.snyk.io/lesson/malicious-code-injection/?ecosystem=javascript">Learn More</a>
     </div>
   </div>
 </section>
