--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
       <a href="#">Learn More</a>
     </div>
     <div class="showcase-card">
-      <img src="https://via.placeholder.com/300x200?text=Demo3" alt="Demo 3" />
-      <h4>Code Injection Tutorial</h4>
+      <img src="https://imgur.com/pwcLUzT" alt="Demo 3" />
+      <h4>SQL Injection Tutorial</h4>
       <p>Injecto tool tutorial: Explore a practical use case of code injection techniques.</p>
-      <a href="https://learn.snyk.io/lesson/malicious-code-injection/?ecosystem=javascript">Learn More</a>
+      <a href="https://portswigger.net/web-security/sql-injection">Learn More</a>
     </div>
   </div>
 </section>
