--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <a href="#">Learn More</a>
     </div>
     <div class="showcase-card">
-      <img src="https://imgur.com/pwcLUzT" alt="Demo 3" />
+      <img src="https://i.imgur.com/pwcLUzT.png" alt="Demo 3" />
       <h4>SQL Injection Tutorial</h4>
       <p>Injecto tool tutorial: Explore a practical use case of code injection techniques.</p>
       <a href="https://portswigger.net/web-security/sql-injection">Learn More</a>
