--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="showcase-card">
       <img src="https://i.imgur.com/pwcLUzT.png" alt="Demo 3" />
       <h4>SQL Injection Tutorial</h4>
-      <p>Injecto tool tutorial: Explore a practical use case of code injection techniques.</p>
+      <p>SQL Injection tutorial: Explore a practical use case of SQL code injection techniques.</p>
       <a href="https://portswigger.net/web-security/sql-injection">Learn More</a>
     </div>
   </div>
